# project-collaboration-novel-platform

./: .gitignore  README.md  deploy.sh  docker-compose.yaml
backend/ai-service/: app.py  cuda.ps1  requirements.txt
backend/ai-service/generator/: generator.py
backend/auth-service/: Cargo.toml  Makefile
backend/auth-service/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
backend/collaboration-service/: package-lock.json  package.json
backend/collaboration-service/src/: app.module.ts  main.ts
backend/collaboration-service/src/collaboration/: collaboration.gateway.ts  collaboration.module.ts  collaboration.service.ts
backend/rest-api-service/: api_examples.txt  pom.xml
backend/rest-api-service/src/main/resources/: application.properties
db/: database_setup.sql
docker/: ai-service.Dockerfile  auth-service.Dockerfile  collaboration-service.Dockerfile  db.Dockerfile  frontend.Dockerfile  rest-api-service.Dockerfile
frontend/: ReinstallNodeModules.ps1  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/core/api/: auth.api.ts  user.api.ts
frontend/src/app/core/guards/: auth.guard.ts  login-auth.guard.ts
frontend/src/app/core/interceptors/: token.interceptor.ts
frontend/src/app/core/models/: auth-api.models.ts  token-api.models.ts  user-api.models.ts  user.model.ts
frontend/src/app/core/services/: auth.service.ts  color.service.ts  time.service.ts  (+1 more)
frontend/src/app/shared/: shared.module.ts
kubernetes/: rest-api-service-deployment.yaml
(+111 files in other folders)
