[package]
name = "authentication_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
actix-cors = "0.7.0"
